select and filter with tags

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/jskpaul/frigo",
+  "homepage": "https://jskpaul.github.io/frigo",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
